<resources>
    <string name="app_name">Cimarnet UABC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Usuario">Usuario</string>
    <string name="CerrarSesion">Cerrar Sesión</string>

    <string name="Correo">Correo</string>
    <string name="Contrasena">Contraseña</string>
    <string name="IniciarSesion">Iniciar Sesión</string>

    <string name="Bienvenida">Bienvenido</string>
    <string name="ProgramaEducativo">Programa Educativo</string>
    <string name="btnCarnets">Carnets</string>
    <string name="btnActividades">Actividades</string>
    <string name="btnEventos">Eventos</string>

    <string name="btnSellos">Boton para sellos</string>

    <string name="Logout">Cerrar Sesión</string>
    <string name="settings">Configuración</string>
    <string name="contactHelp">Contactar Soporte</string>
    <string name="help">Ayuda</string>

    <string name="contexto">Sin contexto</string>
    <string name="NumeroCarnet">Carnet #</string>

    <string name="InfoAlumno">Información del Alumno:</string>
    <string name="InfoCarnet">Información del Carnet:</string>

    <string name="InfoActividad">Información de la Actividad:</string>
    <string name="InfoEvento">Información del Evento:</string>

    <string name="Nombre">Nombre:</string>
    <string name="Matricula">Matrícula:</string>
    <string name="Programa">PE:</string>
    <string name="Informacion">Vacio</string>

    <string name="NumFolio">Num. Folio:</string>
    <string name="CicloEscolar">Ciclo Escolar:</string>
    <string name="FechaCreacion">Fecha de Creación:</string>
    <string name="Clave">Clave de Asignatura:</string>

    <string name="NombreActividad">Nombre Actividad:</string>
    <string name="NombreEvento">Nombre Evento:</string>
    <string name="Evento">Evento:</string>
    <string name="TipoActividad">Tipo:</string>
    <string name="FechaActividad">Fecha:</string>
    <string name="HorarioActividad">Horario:</string>
    <string name="Modalidad">Modalidad:</string>
    <string name="Lugar">Lugar:</string>
    <string name="Espacios">Espacios:</string>
    <string name="Ponente">Ponente:</string>

    <string name="CicloEscolarEvento">Ciclo Escolar:</string>
    <string name="FechaInicio">Fecha Inicio:</string>
    <string name="FechaFin">Fecha Fin:</string>
    <string name="DescripcionEvento">Descripción:</string>

</resources>