<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/informacionActividadDrawerLayout"
    tools:context=".fragments.informacionActividadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/light_green_uabc"
                app:navigationIcon="@drawable/baseline_menu_24"
                app:title="Actividad"
                app:titleCentered="true">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="409dp"
            android:layout_height="510dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42000002">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/light_green_uabc"
                app:cardCornerRadius="7dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.cardview.widget.CardView
                        android:layout_width="350dp"
                        android:layout_height="66dp"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="7dp"
                        app:cardElevation="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.01999998">

                        <MultiAutoCompleteTextView
                            android:id="@+id/mtwNombreActividadInformacion"
                            style="@style/MyMultiAutoCompleteTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:duplicateParentState="false"
                            android:editable="false"
                            android:fontFamily="@font/allerta"
                            android:textSize="15sp"
                            tools:text="@string/NombreActividad" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="350dp"
                        android:layout_height="380dp"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        android:layout_margin="8dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="7dp"
                        app:cardElevation="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.83">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <TextView
                                android:id="@+id/textView27"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Evento"
                                android:textColor="#020000"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.11"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.327" />

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardView"
                                android:layout_width="300dp"
                                android:layout_height="100dp"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:layout_columnWeight="1"
                                android:layout_gravity="fill"
                                android:layout_margin="8dp"
                                app:cardCornerRadius="7dp"
                                app:cardElevation="2dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0">

                                <ImageView
                                    android:id="@+id/imageView3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    tools:src="@tools:sample/backgrounds/scenic" />
                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:id="@+id/textView26"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Ponente"
                                android:textColor="#020000"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.113"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.724" />

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Espacios"
                                android:textColor="#020000"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.111"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.645" />

                            <TextView
                                android:id="@+id/textView24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Modalidad"
                                android:textColor="#020000"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.119"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.57" />

                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/HorarioActividad"
                                android:textColor="#020000"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.107"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.51" />

                            <TextView
                                android:id="@+id/textView22"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/FechaActividad"
                                android:textColor="#020000"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.104"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.45" />

                            <TextView
                                android:id="@+id/textView21"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/TipoActividad"
                                android:textColor="#020000"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.103"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.39" />

                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </androidx.cardview.widget.CardView>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/imgbtRegresarActividad"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="195dp"
            android:background="@drawable/btn_redondo"
            android:clickable="true"
            android:contentDescription="Regresar a la pantalla anterior"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <ImageButton
            android:id="@+id/imgbtScannerActividad"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_scanner"
            android:clickable="true"
            android:contentDescription="Scanear carnet"
            android:src="@drawable/baseline_qr_code_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.868"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nwConsultaActividad"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_alumno"
        />


</androidx.drawerlayout.widget.DrawerLayout>